# opencmiss2cmlibs

./: .gitignore  README.rst  setup.cfg
src/: opencmiss2cmlibs.py  upgradeargondocuments.py
src/libocm2cml/: Grammar.txt  pygram.py
src/libocm2cml/fixes/: fix_imports.py
tests/: test_argon_document.py  test_import.py
tests/resources/backups/from_write/: importopencmiss.py
tests/resources/expected/argon_doc/: argon_doc.json
tests/resources/expected/basic/: importopencmiss.diff
tests/resources/expected/from_write/: importopencmiss.diff
tests/resources/expected/multiple/: importopencmiss.diff
tests/resources/expected/multiple_argon_docs/: argon_doc_2.json
tests/resources/expected/with_cmlibs_zincwidgets/: importopencmiss.diff
tests/resources/inputs/basic/: importopencmiss.py
tests/resources/inputs/multiple/: importopencmiss.py
tests/resources/inputs/multiple_argon_docs/: argon_doc_1.json  argon_doc_2.json
tests/resources/inputs/not_argon_doc/: not_actually_json.json
tests/resources/inputs/python3_syntax/: syntax.py
tests/resources/inputs/with_cmlibs_zincwidgets/: importopencmiss.py
