[metadata]
name = opencmiss2cmlibs
version = attr: opencmiss2cmlibs.__version__
description = Application converting packages that use OpenCMISS-Zinc to CMLibs Zinc.
long_description = file: README.rst, LICENSE
long_description_content_type = text/x-rst
keywords = continuum modelling
license = Apache Software License
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find:
py_modules = opencmiss2cmlibs, upgradeargondocuments

[options.entry_points]
console_scripts =
        opencmiss2cmlibs = opencmiss2cmlibs:entry_point
        upgradeargondocuments = upgradeargondocuments:entry_point

[options.packages.find]
where = src

[options.package_data]
libocm2cml =
    Grammar.txt
    PatternGrammar.txt
